2008-11-19  Lute Kamstra  <lute@gnu.org>

	* autoinsert.el (auto-insert-alist): Don't use match data.

2008-11-19  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-mode-map): Add some menu :help.

	* autoinsert.el (auto-insert-alist): Update template to FDL 1.3+.

	* emacs-lisp/cl.el (floor*, ceiling*, truncate*, round*, mod*):
	* term/w32-win.el (x-select-font): Declare.

	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map): Fix a/an typo.
	Use the imperative for all help strings.

2008-11-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/ispell.el (ispell-dictionary-base-alist): Adjust to the
	case where the default dictionary is French, Spanish, younameit.

	* window.el (window--frame-usable-p): Consider dedicated windows
	as usable.

	* files.el (confirm-nonexistent-file-or-buffer):
	Rename from find-file-confirm-nonexistent-file.
	(read-buffer-to-switch): Use it.

2008-11-18  Juanma Barranquero  <lekktu@gmail.com>

	* server.el (server-temp-file-p): Use `string-match-p'.
	(server-socket-dir): Set to nil if local sockets are unsupported.
	(server-start): Don't try to delete local socket if unsupported.
	(server-kill-new-buffers): Reflow docstring.
	(server-delete-client, server-handle-delete-frame)
	(server-save-buffers-kill-terminal): Doc fixes.
	(server-send-string): Fix typo in docstring.

2008-11-18  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-start-hook): New hook.
	(compilation-start): Run it on the compilation process.

2008-11-18  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (update-leim-list-file): Simplify.
	(prefer-coding-system, find-coding-systems-for-charsets):
	Fix docstring typos.
	(select-safe-coding-system, input-method-exit-on-first-char)
	(language-info-alist, language-info-custom-alist): Reflow docstrings.
	(toggle-input-method, read-multilingual-string): Doc fixes.
	Reflow docstrings.
	(locale-name-match, sort-coding-systems, find-multibyte-characters)